Update FrequencyData to use new frequency data with AN, AC and HOM counts. Add new Frequency.percentageFrequency method Add new AlleleData and AlleleProtoFormatter classes to help  with building and display of AlleleProto objects